src/objects/Customer_Segmentation__c.object
<CustomObject>
    <description>Customer Segmentation in LPA</description>
    <fields>
        <fullName>Customer_Segmentation_Indicator__c</fullName>
        <label>Customer Segmentation Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Tier1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Segmentations</relationshipLabel>
        <relationshipName>Customer_Segmentations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Customer Segmentation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Customer Segmentation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Segmentations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>